frontend/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.19.1-alpine
        name: nginx
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /question
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
       - name: config-volume
         configMap:
           name: nginx-conf
